# Mutiuser_Todo_App

todo_app/: README.md  pyproject.toml
todo_app/app/: auth.py  db.py  main.py  models.py  settings.py
todo_app/app/router/: user.py
